# xcube-icosdp

./: .gitignore  CHANGES.md  CONTRIBUTING.md  README.md  environment.yml  pyproject.toml
.github/workflows/: unit-tests.yml
examples/: access_agg_fluxcomxbase.ipynb  access_aggregated.py  access_fluxcom_x_base.ipynb  access_fluxcomxbase.ipynb  debug.py
examples/icospd_cache/NEE_monthly_2020_2021.zarr/: .zattrs  .zmetadata
examples/icospd_cache/NEE_monthly_2020_2021.zarr/NEE/: .zarray  .zattrs  0.0.0  1.0.0
examples/icospd_cache/NEE_monthly_2020_2021.zarr/hour_bnds/: .zarray  .zattrs  0.0
examples/icospd_cache/NEE_monthly_2020_2021.zarr/land_fraction/: .zattrs  0.0
examples/icospd_cache/NEE_monthly_2020_2021.zarr/lat/: .zattrs  0
examples/icospd_cache/NEE_monthly_2020_2021.zarr/lat_bnds/: .zattrs  0.0
examples/icospd_cache/NEE_monthly_2020_2021.zarr/lon/: .zattrs  0
examples/icospd_cache/NEE_monthly_2020_2021.zarr/lon_bnds/: .zarray  .zattrs  0.0
examples/icospd_cache/NEE_monthly_2020_2021.zarr/time/: .zattrs  0
examples/icospd_cache/NEE_monthly_2020_2021.zarr/time_bnds/: .zarray  .zattrs  0.0  1.0
tests/: __init__.py  helpers.py  test_store.py
xcube_icosdp/: __init__.py  constants.py  plugin.py  preload.py  store.py  utils.py  version.py
