[build-system]
requires = ["setuptools >= 61.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xcube-icosdp"
dynamic = ["version", "readme"]
authors = [
  {name = "xcube Development Team"},
]
description = "A data store to access datasets from ICOS Data Portal."
keywords = [
  "xcube",
  "ICOS",
  "FLUXCOM-X-BASE",
  "xarray",
  "dask",
  "parallel processing",
]
license = { text = "GPL-3.0-or-later" }
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]

requires-python = ">=3.10"

dependencies = [
  "icoscp_core",
  "numpy",
  "pandas",
  "xarray",
  "xcube",
]

[project.optional-dependencies]
dev = [
  # Build tools
  "build",
  "hatch",
  "twine",
  # Code Style / QA
  "black",
  "isort",
  "ruff",
  # Testing
  "pytest",
  "pytest-cov",
  # Notebooks / Visualisation
  "jupyterlab",
  "matplotlib",
]
doc = [
]

[tool.setuptools.dynamic]
version = {attr = "xcube_icosdp.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = [
  "tests",
  "docs"
]

[tool.flake8]
max-line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
# There is a problem with ruff when linting imports
exclude = ["**/*.ipynb"]

[project.urls]
Documentation = "https://github.com/xcube-dev/xcube-icosdp"
Repository = "https://github.com/xcube-dev/xcube-icosdp"
Changelog = "https://github.com/xcube-dev/xcube-icosdp/blob/main/CHANGES.md"
Issues = "https://github.com/xcube-dev/xcube-icosdp/issues"
